# ZoloHQ

./: .env  .gitignore  .pre-commit-config.yaml  AI_MODELS_TYPING_FIX_COMPLETE.md  CURRENT_SESSION_STATUS.md  DASHBOARD_ANALYSIS_COMPLETE_REPORT.md  DASHBOARD_REVIEW_COMPLETE_REPORT.md  DATA_SOURCE_FIX_COMPLETE.md  DISASTER_RECOVERY_CHECKLIST.md  Dockerfile  EMERGENCY_LAUNCH.py  ENHANCED_DASHBOARD_MEMORY_LEAK_RESOLUTION_COMPLETE.md  INSTRUKCJA_STAGING.md  INTEGRATION_MONITORING_TEMPLATE.md  LAUNCH_DASHBOARDS_FIXED.bat  LAUNCH_ZOL0_SYSTEM.bat  LAUNCH_ZOL0_SYSTEM_FIXED.bat  MEMORY_LEAK_FIXES_COMPLETE.md  MEMORY_LEAK_FIX_COMPLETE_REPORT.md  NATYCHMIAST_URUCHOM.md  PERFORMANCE_MONITORING_COMPLETION_REPORT.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PRODUCTION_INTEGRATION_MONITORING_GUIDE.md  README.md  START_ALL.bat  START_BACKEND_NOW.bat  START_BACKEND_SERVICES.bat  START_ZOL0_NOW.bat  SYSTEM_STATUS_FINAL_REPORT.md  Start-BackendServices.ps1  Start-ZoL0-Complete-System.ps1  StartCompleteSystem.ps1  UNIFIED_DASHBOARD_GUIDE.md  URUCHOM_ZOL0.ps1  ZOLO_PROD_RAPORT_CHECKLISTA_2025.md  active_memory_leak_detector.py  advanced_alert_management.py  advanced_backtesting_engine.py  advanced_order_management_system.py  advanced_performance_monitor.py  (+195 more)
TA-Lib-ta-lib-python-a1cbb44/: setup.py
ai/: advanced_agent.py  agent.py
ai_models/: anomaly_detection.py  model_recognition.py  sentiment_ai.py
data/: demo_data.py  real_bybit_data.csv  real_bybit_data_1m.csv  real_bybit_data_3m.csv  real_bybit_data_5m.csv  real_bybit_data_5m_30d.csv
deploy_history/: .gitkeep
models/: core.py
(+76 files in other folders)
